<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">奇速共享</string>
    <string name="app_cancel">取消</string>
    <string name="app_confirm">确定</string>
    <string name="app_next_step">下一步</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_submit">提交</string>
    <string name="home_title">奇速服务</string>
    <string name="item_station_map">桩点地图</string>
    <string name="item_share_charge">共享充电</string>
    <string name="item_share_car">共享汽车</string>
    <string name="item_nearby_station">附近电站</string>
    <string name="item_nearby_car">附近车辆</string>
    <string name="item_latest_charge">最近充电</string>
    <string name="item_my_collection">我的收藏</string>
    <string name="home_charge_now">立即充电</string>
    <string name="home_is_charging">正在充电</string>
    <string name="item_partner">合伙人</string>
    <string name="service_title">我的订单</string>
    <string name="service_charge_service">充电服务</string>
    <string name="service_my_service">我的服务</string>
    <string name="service_share_station">分享充电桩</string>
    <string name="service_diy_station">我要做桩主</string>
    <string name="service_is_building">建设中</string>
    <string name="service_user_service">客户服务</string>
    <string name="service_phone_num">服务热线</string>
    <string name="service_wechat">微信在线</string>
    <string name="user_title">个人中心</string>
    <string name="user_account">我的账户</string>
    <string name="user_comm_user">游客</string>
    <string name="user_not_login">未登录</string>
    <string name="user_balance">余额</string>
    <string name="user_balance_content">0.00</string>
    <string name="user_recharge">充值</string>
    <string name="user_bill">账单</string>
    <string name="user_my_pocket">我的钱包</string>
    <string name="user_deposit_charge">开通会员</string>
    <string name="user_coupon">优惠券</string>
    <string name="user_charging_record">充电记录</string>
    <string name="user_mytrip">我的行程</string>
    <string name="user_transaction_record">交易记录</string>
    <string name="user_payment_pwd">支付密码</string>
    <string name="user_operation_flow">操作流程</string>
    <string name="user_pay_by_others">代付管理</string>
    <string name="user_my_travel">我的行程</string>
    <string name="user_book_tips">租车指南</string>
    <string name="user_book_investor">我的认购</string>
    <string name="user_notify">系统消息</string>
    <string name="user_pay_myself">自费说明</string>
    <string name="user_option">设置</string>
    <string name="setting_login">登录/注册</string>
    <string name="setting_exit">退出登录</string>
    <string name="personal_info_title">个人信息</string>
    <string name="personal_portrait">头像</string>
    <string name="personal_alias">昵称</string>
    <string name="personal_alias_default">135****4567</string>
    <string name="personal_gender">性别</string>
    <string name="personal_gender_default">保密</string>
    <string name="personal_gender_male">男</string>
    <string name="personal_gender_female">女</string>
    <string name="personal_phone">手机号码</string>
    <string name="personal_phone_default">13512334567</string>
    <string name="personal_verify_car_owner">认证车主</string>
    <string name="personal_certified">已认证</string>
    <string name="personal_not_certified">未认证</string>
    <string name="personal_modify_pwd">修改密码</string>
    <string name="personal_camera">拍照上传</string>
    <string name="personal_local">本地图片上传</string>
    <string name="modify_portrait_title">更换头像</string>
    <string name="charging_record_title">充电记录</string>
    <string name="charging_record_payment_amount">支付金额：</string>
    <string name="charging_record_actual_amount">实付金额：</string>
    <string name="charging_record_return_amount">剩余金额：</string>
    <string name="charging_record_charging_amount">充电电量：</string>
    <string name="charging_record_charging_duration">充电时长：</string>
    <string name="charging_statistics_title">充电统计</string>
    <string name="charging_statistics_charging_total">充电总量</string>
    <string name="charging_statistics_charging_times">充电总次数</string>
    <string name="charging_statistics_charging_average">平均每次充电量</string>
    <string name="charging_detail_terminal_no">终端编号:</string>
    <string name="charging_detail_charging_detail">充电详情</string>
    <string name="charging_detail_payment_amount">支付金额</string>
    <string name="charging_detail_charging_amount">充电电量</string>
    <string name="charging_detail_charging_duration">充电时长</string>
    <string name="charging_detail_charging_time">充电时间</string>
    <string name="charging_detail_start_time">开始时间：</string>
    <string name="charging_detail_end_time">结束时间：</string>
    <string name="charging_detail_charge_standard">各时段充电详情/收费标准</string>
    <string name="charging_detail_consumption_amount">用电量：</string>
    <string name="charging_detail_electricity_fee">电&#160;&#160;&#160;&#160;费：</string>
    <string name="charging_detail_service_fee">服务费：</string>
    <string name="modify_alias_title">修改昵称</string>
    <string name="modify_alias_hint">请输入昵称</string>
    <string name="operation_flow_title">操作流程</string>
    <string name="operation_flow_subtitle_1">扫二维码充电</string>
    <string name="operation_flow_content_1">1、请将充电枪连接到您的车，点击首页中的“立即充电”按钮，进入到“扫码充电”页面，对准终端上的二维码扫一扫即可。</string>
    <string name="operation_flow_subtitle_2">输入终端编号充电</string>
    <string name="operation_flow_content_2">2、请将充电枪连接到您的车，点击“输入终端编号充电”按钮，输入设备上的终端编号后提交即可。</string>
    <string name="car_info_title">我的车辆</string>
    <string name="add_car_info_title">车辆信息</string>
    <string name="add_car_info_brand">品牌车型</string>
    <string name="add_car_info_brand_hint">选择品牌</string>
    <string name="add_car_info_license_no">车牌号</string>
    <string name="add_car_info_license_no_hint">请输入</string>
    <string name="choose_power_title">选择动力类型</string>
    <string name="choose_brand_title">选择品牌</string>
    <string name="choose_brand_type_title">选择车型</string>
    <string name="scan_text">将二维码对准方框，即可自动扫描</string>
    <string name="station_info_open_time">开放时间：</string>
    <string name="station_info_phone">400-7569999</string>
    <string name="station_info_SOC">(SOC:</string>
    <string name="station_info_navi">地图导航</string>
    <string name="station_info_charging_fee">当前电费：</string>
    <string name="station_info_parking_fee">停车费：</string>
    <string name="station_info_service_fee">服务费：</string>
    <string name="station_info_detail">详情</string>
    <string name="station_info_parking">车位</string>
    <string name="station_info_comment">评论</string>
    <string name="station_info_no">编&#160;&#160;&#160;&#160;号：</string>
    <string name="station_info_start_navi">导航</string>
    <string name="station_info_amap">高德地图</string>
    <string name="station_info_baidu">百度地图</string>
    <string name="share_charging_title">充电桩定位</string>
    <string name="share_charging_search">输入充电点位置/拖动地图确定图钉位置</string>
    <string name="share_charging_lat">经度：</string>
    <string name="share_charging_lng">纬度：</string>
    <string name="share_charging_submit">确定位置</string>
    <string name="share_charging_loading">正在定位...</string>
    <string name="share_charging_type_title">分享充电桩</string>
    <string name="share_charging_type_private">分享个人充电桩</string>
    <string name="share_charging_type_public">分享公共充电桩</string>
    <string name="share_charging_type_private_prompt">分享个人充电桩，与车友共享新能源，参与分润的同时，参与绿色出行。</string>
    <string name="share_charging_type_public_prompt">分享已有的公共充电桩信息，共同完善充电地图，助力绿色出行。</string>
    <string name="poi_search_title">位置搜索</string>
    <string name="poi_search_search_hint">搜索地址</string>
    <string name="charging_filter_title">筛选</string>
    <string name="charging_filter_interface">充电接口</string>
    <string name="charging_filter_all">全部</string>
    <string name="charging_filter_interface_1">国标</string>
    <string name="charging_filter_interface_2">特斯拉</string>
    <string name="charging_filter_carr">运营商</string>
    <string name="charging_filter_carr_1">自营</string>
    <string name="charging_filter_carr_2">非自营</string>
    <string name="charging_filter_mode">充电方式</string>
    <string name="charging_filter_mode_1">快充</string>
    <string name="charging_filter_mode_2">慢充</string>
    <string name="charging_filter_type">桩点类型</string>
    <string name="charging_filter_type_1">公共桩</string>
    <string name="charging_filter_type_2">个人桩</string>
    <string name="charging_filter_is_void">是否空闲</string>
    <string name="charging_filter_with_gun">带充电枪</string>
    <string name="charging_filter_free_parking">免费停车</string>
    <string name="charging_filter_all_day">全时段开放</string>
    <string name="station_map_tips">图标内数字表示该站点空闲充电桩数量</string>
    <string name="station_map_title">桩点地图</string>
    <string name="station_list_title">桩点列表</string>
    <string name="pay_title">支付</string>
    <string name="pay_direct">实时支付</string>
    <string name="pay_account">账户支付</string>
    <string name="pay_others">他人代付</string>
    <string name="pay_select_amount">请选择金额</string>
    <string name="pay_select_amount_1">10元</string>
    <string name="pay_select_amount_2">20元</string>
    <string name="pay_select_amount_3">30元</string>
    <string name="pay_custom_amount">自定义金额</string>
    <string name="pay_mode">支付方式</string>
    <string name="pay_wxpay">微信支付</string>
    <string name="pay_alipay">支付宝</string>
    <string name="pay_prompt">如果电量已充满或因其他意外情况而停止充电，导致充电未完成，系统会退回剩余充电金额到您的支付账户。</string>
    <string name="pay_select_others">选择代付人</string>
    <string name="pay_select_others_hint">请选择代付人</string>
    <string name="pay_tips">请选择充值金额</string>
    <string name="pay_fee">到账金额</string>
    <string name="build_pile_title">建桩</string>
    <string name="build_pile_condition">建桩条件</string>
    <string name="build_pile_condition_1">您自有停车场地或可以介绍场地。</string>
    <string name="build_pile_condition_2">车位对外开放，有电力接口且电容足够。</string>
    <string name="build_pile_procedure">建桩步骤</string>
    <string name="build_pile_procedure_1">1.&#160;客服确认</string>
    <string name="build_pile_procedure_content_1">确认是否满足建桩条件。</string>
    <string name="build_pile_procedure_2">2.&#160;运营商对接</string>
    <string name="build_pile_procedure_content_2">对现场进行勘察并提出方案。</string>
    <string name="build_pile_procedure_3">3.&#160;签订协议</string>
    <string name="build_pile_procedure_content_3">贯彻落实充电桩的施工。</string>
    <string name="build_pile_submit">我要做桩主</string>
    <string name="device_detail_title">终端详情</string>
    <string name="device_detail_station_name">电站名称</string>
    <string name="device_detail_no">终端编号</string>
    <string name="device_detail_interface">充电接口</string>
    <string name="device_detail_type">终端类型</string>
    <string name="device_detail_state">终端状态</string>
    <string name="device_detail_charge_detail">收费详情</string>
    <string name="device_detail_charging">立即充电</string>
    <string name="connection_title">正在连接</string>
    <string name="connection_failure">连接失败</string>
    <string name="connection_failure_prompt">真遗憾！未获取到充电桩信息...</string>
    <string name="connection_without_insert_prompt">连接失败，请插入充电枪后重试！</string>
    <string name="connection_reconnection">重新连接</string>
    <string name="connection_without_insert">确认插枪</string>
    <string name="annual_type">付款模式</string>
    <string name="annual_validity">按年付费</string>
    <string name="annual_amount">应付金额</string>
    <string name="annual_tip">开通会员享受充电服务费9折优惠，会员到期前不可退订。</string>
    <string name="recharge_amount_hint">请输入充值金额（小于10000元）</string>
    <string name="recharge_submit">立即充值</string>
    <string name="pay_by_others_manage_add_phone">手机号</string>
    <string name="pay_by_others_manage_add_phone_hint">请输入手机号码</string>
    <string name="pay_by_others_manage_add_name">姓　名</string>
    <string name="pay_by_others_manage_add_name_hint">请输入姓名</string>
    <string name="car_share_take_photo">拍照上传</string>
    <string name="car_share_get_photo">本地图片上传</string>
</resources>