<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary"
    android:orientation="vertical">

    <include layout="@layout/layout_title_primary" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bg_white"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextView_Subtitle_Black"
                android:text="@string/pay_by_others_manage_add_phone"
                android:layout_marginLeft="15dp"/>

            <www.qisu666.com.widget.ClearEditText
                android:id="@+id/et_phone"
                style="@style/et_common"
                android:hint="@string/pay_by_others_manage_add_phone_hint"
                android:maxLength="11"
                android:inputType="number"/>

        </TableRow>

        <View
            style="@style/Divide_Horizontal" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextView_Subtitle_Black"
                android:text="@string/pay_by_others_manage_add_name"
                android:layout_marginLeft="15dp"/>

            <www.qisu666.com.widget.ClearEditText
                android:id="@+id/et_name"
                style="@style/et_common"
                android:hint="@string/pay_by_others_manage_add_name_hint"
                android:maxLength="16" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_padding_lnr"
        android:layout_marginRight="@dimen/default_padding_lnr"
        android:background="@drawable/selector_primary_btn_a"
        android:text="@string/app_submit"
        android:textSize="@dimen/text_title"
        android:textColor="@color/text_white"
        android:layout_marginTop="@dimen/default_margin_lnr"/>

</LinearLayout>
